<?xml version="1.0" encoding="UTF-8"?>
<project>
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.dude</groupId>
	<artifactId>TimeTracker</artifactId>
	<version>1.1</version>
	<packaging>jar</packaging>
	<name>TimeTracker</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>15</java.version>
		<kotlin.version>1.7.10</kotlin.version>
		<javafx.version>18.0.1</javafx.version>
	</properties>

	<repositories>
		<repository>
			<id>jcenter</id>
			<name>jcenter</name>
			<url>https://jcenter.bintray.com</url>
		</repository>
	</repositories>

	<dependencies>

		<!-- MAVEN SHADE -->
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-shade-plugin</artifactId>
			<version>3.3.0</version>
			<exclusions>
				<exclusion>
					<groupId>commons-io</groupId>
					<artifactId>commons-io</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.commons</groupId>
					<artifactId>commons-collections4</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.maven.shared</groupId>
					<artifactId>maven-shared-utils</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- KOTLIN -->
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-stdlib</artifactId>
			<version>${kotlin.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-reflect</artifactId>
			<version>${kotlin.version}</version>
		</dependency>

		<!-- JAVAFX -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>

	</dependencies>

	<build>
		<sourceDirectory>src/main/kotlin</sourceDirectory>
		<plugins>
<!--			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>${java.version}</release>
					<compilerArgs>
						<arg>&#45;&#45;add-exports java.base/jdk.internal.misc=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>-->
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.5</version>
				<configuration>
					<mainClass>de.dude.timetracker.App</mainClass>
					<options>
						<option>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED</option>
					</options>
				</configuration>
				<executions>
					<execution>
						<id>debug</id>
						<configuration>
							<options>
								<option>-agentlib:jdwp=transport=dt_socket,server=n,address=localhost:8000,suspend=y</option>
								<option>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED</option>
							</options>
						</configuration>
					</execution>
				</executions>
				<!--				<configuration>
									<release>${java.version}</release>
									<launcher>launcher</launcher>
									<mainClass>de.dude.timetracker.App</mainClass>
									&lt;!&ndash;NEEDED FOR MODULARITY
									<includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
									<jlinkImageName>ExcelAnalyser</jlinkImageName>
									<mainClass>de.dude.ExcelAnalyser/de.dude.timetracker.App</mainClass>&ndash;&gt;
								</configuration>-->
			</plugin>
			<plugin>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-maven-plugin</artifactId>
				<version>${kotlin.version}</version>
				<executions>
					<execution>
						<id>kapt</id>
						<goals>
							<goal>kapt</goal>
						</goals>
						<phase>process-sources</phase>
						<configuration>
							<sourceDirs>
								<sourceDir>src/main/kotlin</sourceDir>
							</sourceDirs>
						</configuration>
					</execution>
					<execution>
						<id>compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<sourceDirs>
								<sourceDir>src/main/kotlin</sourceDir>
							</sourceDirs>
						</configuration>
					</execution>
				</executions>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>

            <!-- PACKAGING TOOLS -->

			<!-- ATM USE THIS! for fat jar -->
			<!--            <plugin>
							<artifactId>maven-shade-plugin</artifactId>
							<version>3.2.4</version>
							<executions>
								<execution>
									<phase>package</phase>
									<goals>
										<goal>shade</goal>
									</goals>
									<configuration>
										<filters>
											<filter>
												<artifact>*:*</artifact>
												<excludes>
													<exclude>META-INF/*.SF</exclude>
													<exclude>META-INF/*.DSA</exclude>
													<exclude>META-INF/*.RSA</exclude>
												</excludes>
											</filter>
										</filters>
										<createDependencyReducedPom>false</createDependencyReducedPom>
										<transformers>
											<transformer
													implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
												<mainClass>de.dude.Main</mainClass>
											</transformer>
										</transformers>
									</configuration>
								</execution>
							</executions>
						</plugin>-->

			<!-- for slim jar: fix auto-named modules (not working with current setup) only with MODULARITY -->
			<!--            <plugin>
							<groupId>org.moditect</groupId>
							<artifactId>moditect-maven-plugin</artifactId>
							<version>1.0.0.Beta2</version>
							<executions>
								<execution>
									<id>add-module-infos</id>
									<phase>generate-resources</phase>
									<goals>
										<goal>add-module-info</goal>
									</goals>
									<configuration>
										<modules>
											<module>
												<artifact>
													<groupId>org.jetbrains.kotlinx</groupId>
													<artifactId>kotlinx-serialization-json-jvm</artifactId>
													<version>${serialization.version}</version>
												</artifact>
												<moduleInfo>
													<exports>
														*;
													</exports>
												</moduleInfo>
											</module>
										</modules>
									</configuration>
								</execution>
							</executions>
						</plugin>-->

		</plugins>
	</build>
</project>
